# f1tenth

./: README.md  frames_2024-06-02_10.18.50.gv
src/Raceline-Optimization/: main_gen_frictionmap.py  main_globaltraj_f110.py  map_converter.ipynb  sanity_check.ipynb  visualize_raceline.ipynb
src/Raceline-Optimization/inputs/frictionmaps/: 20231203_184055_modena_2019_tpadata.json  20231203_184149_Spa_slammed_tpadata.json  20231203_184149_Spa_slammed_tpamap.csv
src/Raceline-Optimization/inputs/tracks/: Spa_slammed.csv
src/f1tenth_gym_ros/: setup.py
src/f1tenth_gym_ros/config/: sim.yaml
src/f1tenth_gym_ros/f1tenth_gym_ros/: gym_bridge.py
src/f1tenth_gym_ros/launch/: gym_bridge_launch.py  launch.py
src/f1tenth_gym_ros/maps/: Spa.yaml  campusmap.yaml
src/f1tenth_vff_planner/: CMakeLists.txt  package.xml
src/f1tenth_vff_planner/src/: vff_planner.cpp
src/gap_follow/: CMakeLists.txt
src/gap_follow/scripts/: gap_the_follow.py
src/gap_follow/src/: gap_the_follow_cpp.cpp
src/lidar_angle_filter/: CMakeLists.txt  package.xml
src/lidar_angle_filter/src/: lidar_filter.cpp
src/my_messages/: CMakeLists.txt  package.xml
src/my_messages/msg/: KeyValue.msg  PIDInput.msg
src/painter/: package.xml  setup.cfg  setup.py
src/painter/painter/: painter.py
src/pid_msgs/: CMakeLists.txt  package.xml
src/plexer360/: package.xml  setup.cfg  setup.py
src/plexer360/src/: control.py  dqn.py  dqn_bridge.py  field_view.py  multiplexer.py
src/pure_pursuit/config/: sim_config.yaml
src/pure_pursuit/launch/: pure_pursuit_launch.py  sim_pure_pursuit_launch.py
src/pure_pursuit/src/: pure_pursuit.cpp  waypoint_visualizer.cpp
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: publisher_member_function.py  subscriber_member_function.py
src/qlearn/: package.xml  setup.cfg  setup.py
src/qlearn/qlearn/: DQN.py  QNetwork.py  QTable.py  ReplayBuffer.py  qlearn.py
src/qlearn_interfaces/: CMakeLists.txt  package.xml
src/simulation/f1tenth_gym_ros/: README.md
src/simulation/f1tenth_gym_ros/maps/: EL_roads.yaml  Levine.yaml  Spa_slammed.yaml
src/slam_toolbox/: CMakeLists.txt
src/slam_toolbox/config/: mapper_params_lifelong.yaml  mapper_params_offline.yaml
src/slam_toolbox/launch/: reset_and_slam_launch.py
src/vff/: CMakeLists.txt
src/vff/include/: pid.hpp
src/vff/src/: pid.cpp  vff_planner.cpp
src/wall_follow/src/: wall_follow_node.cpp
src/wall_follower_pid/: package.xml  setup.cfg  setup.py
src/wall_follower_pid/wall_follower_pid/: control.py  wall_distance_finder.py
src/waypoint_follow/: package.xml  setup.cfg  setup.py
src/waypoint_follow/waypoint_follow/: PID.py  PurePursuit.py  WaypointHandler.py  WaypointNavigator.py  lookAhead.py  waypoint_follow.py  waypoint_viasualizer.py
src/waypoint_publisher/: CMakeLists.txt  package.xml
src/waypoint_publisher/data/: Spa_slammed_mincurv-0.15.csv  Spa_slammed_mincurv-0.3.csv  campusmap_path.csv
src/waypoint_publisher/src/: waypoint_publisher.cpp
src/waypoint_visualizer/: CMakeLists.txt  package.xml
src/waypoint_visualizer/src/: next_point_visualizer.cpp
src/waypoint_writer/: package.xml  setup.cfg  setup.py
src/waypoint_writer/waypoint_writer/: waypoint_writer.py
