<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plexer360</name>
  <version>0.0.0</version>
  <description>Multiplexer</description>
  <maintainer email="serga@todo.todo">serga</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>             <!--import the standard messages-->
  <exec_depend>sensor_msgs</exec_depend>          <!--import the sensor messages-->
  <exec_depend>ackermann_msgs</exec_depend>       <!--import the ackermann messages-->
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group> <!--used to interface with ros-->

  <export>
    <build_type>ament_python</build_type>          <!--build using cmake to prevent stderr-->
  </export>
</package>