cmake_minimum_required(VERSION 3.8)
project(waypoint_visualizer)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2 REQUIRED)

include_directories(include)


if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()


add_executable(next_waypoint_visualizer src/next_point_visualizer.cpp)

ament_target_dependencies(next_waypoint_visualizer
  rclcpp geometry_msgs std_msgs visualization_msgs nav_msgs tf2)

# Install Cpp executables
install(TARGETS
  next_waypoint_visualizer
  DESTINATION lib/${PROJECT_NAME})

ament_package()
